[package]
name = "cong"
version = "1.0.0"
edition = "2021"

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2.83"
strum = "0.24.1"
strum_macros = "0.24.1"
serde = "1.0.147"
serde_derive = "1.0.147"
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
	"HtmlSelectElement",
  "Navigator",
  "Window",
  "Clipboard"
]