[package]
name = "cong"
version = "1.0.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-hooks = { git = "https://github.com/jetli/yew-hooks" }
gloo = "0.8.0"
gloo-utils = { version = "0.1.5", features = ["serde"] }
askama = "0.11"
wasm-bindgen = "0.2.83"
strum = "0.24.1"
strum_macros = "0.24.1"
serde = "1.0.147"
serde_derive = "1.0.147"
log = "0.4.6"
web-sys = { version = "0.3.60", features = ["HtmlSelectElement", "HtmlElement"]}
wasm-logger = "0.2.0"